<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Y_Axis" Id="{6dda9f6f-4844-459c-b57b-a0a25473fef4}">
    <Declaration><![CDATA[TYPE ST_Y_Axis :
STRUCT
	
	// Parameters
	posHome      					:LREAL;					//Home Position
	posWorkPositions   				:ARRAY[1..3] OF LREAL;	//Array of Positions
	fPositionOffsets   				:ARRAY[1..3] OF LREAL;	//Array of Position Offsets

    bSetToHome     					:BOOL;					//Set Position Home
    bSetToPosition    				:ARRAY[1..3] OF BOOL;	//Flags to Request a Position
	
	fTargetVelocity					:LREAL;					//Set Target Velocity
	fRetractVelocity				:LREAL;					//Set Retract Velocity
	
	// Feedback
	bAxis_1_InErrorState			:BOOL;
	nAxis_1_nErrorID				:UINT;
	bAxis_1_SafetyRelayFB			:BOOL;					//Axis Safety Relay Feedback
	
//------------------------------------------------------------------------------------------------oldschoo1


END_STRUCT
END_TYPE

(*
***INFO
posPoints[1]:= 15.00;		//Work position to pick the Screw
posPoints[2]:= 33.00;		//Work position to do Screwing and Pressing 
posPoints[3]:= 100.00;		//Position to take out the Pack Fixture
*)]]></Declaration>
  </DUT>
</TcPlcObject>